--- a/custom_components/redsea-local/manifest.json
+++ b/custom_components/redsea-local/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "redsea",
   "name": "Redsea-local",
-  "version": "1.0.0",
-  "documentation": "https://github.com/gjongenelen/ha-redsea-local",
+  "version": "1.0.1",
+  "documentation": "https://github.com/mcaminiti/ha-redsea-local",
   "dependencies": [],
-  "codeowners": ["@gjongenelen"],
+  "codeowners": ["@mcaminiti"],
   "requirements": ["requests"],
   "config_flow": true
 }
